--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -20,5 +20,8 @@
         <activity android:name=".Controllers.Activities.HistoricalActivity">
         </activity>
 
+        <activity android:name=".Models.Data">
+        </activity>
+
     </application>
 </manifest>
