--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="projet3.moodtracker">
+    package="com.example.android.moodtracker">
 
     <application
         android:allowBackup="true"
@@ -9,19 +9,14 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".Controllers.Activities.MainActivity">
+        <activity android:name=".Controllers.MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-
-        <activity android:name=".Controllers.Activities.HistoricalActivity">
-        </activity>
-
-        <activity android:name=".Models.Data">
-        </activity>
-
+        <activity android:name=".Controllers.HistoricalActivity"></activity>
     </application>
+
 </manifest>
