two activites and no dry

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -17,6 +17,7 @@
             </intent-filter>
         </activity>
         <activity android:name=".Controllers.HistoricalActivity"></activity>
+        <receiver android:name=".Controllers.MainActivity$AlarmReceiver"></receiver>
     </application>
 
 </manifest>
